--- a/apps/student/app/global.css
+++ b/apps/student/app/global.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  background-color: #fff;
-}
-
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -62,6 +58,22 @@ body {
     @apply bg-background text-foreground;
   }
 }
+body {
+  background-color: hsl(var(--muted));
+}
+.container {
+  max-width: 1350px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media (min-width: 768px) {
+  .container {
+    padding: 0px 90px;
+  }
+  .container-padding {
+    padding: 0px 90px;
+  }
+}
 
 .swiper-pagination-bullet {
   width: 7px !important;
@@ -86,4 +98,14 @@ body {
 .scrollbar-hidden::-webkit-scrollbar {
   display: none;
   /* Chrome, Safari, Opera */
+}
+.card-grid {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+.card-grid-two {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
