change textarea to forila editor

--- a/apps/admin/app/global.css
+++ b/apps/admin/app/global.css
@@ -153,6 +153,10 @@ pre {
     line-height: 45px !important;
 }
 
+.fr-second-toolbar {
+    display: none !important;
+}
+
 @media only screen and (max-width: 1366px) {
     .calender-padding {
         padding-top: 2.5rem;
