fix unable add same cpurse for mutiple times

--- a/apps/admin/app/global.css
+++ b/apps/admin/app/global.css
@@ -190,6 +190,10 @@ span[style="color: blueviolet;"] {
   display: none;
 } */
 
+.fr-wrapper {
+    display: none !important;
+}
+
 .fr-wrapper ol,
 ul,
 menu {
