--- a/apps/admin/app/global.css
+++ b/apps/admin/app/global.css
@@ -190,9 +190,9 @@ span[style="color: blueviolet;"] {
   display: none;
 } */
 
-.fr-wrapper {
+/* .fr-wrapper {
     display: none !important;
-}
+} */
 
 .fr-wrapper ol,
 ul,
