--- a/apps/admin/app/global.css
+++ b/apps/admin/app/global.css
@@ -186,9 +186,9 @@ span[style="color: blueviolet;"] {
     display: none;
 }
 
-.fr-wrapper div:first-child {
+/* .fr-wrapper div:first-child {
   display: none;
-}
+} */
 
 /* .fr-wrapper {
     display: none !important;
