fix background issue

--- a/apps/student/app/global.css
+++ b/apps/student/app/global.css
@@ -60,9 +60,9 @@
     @apply bg-background text-foreground;
   }
 }
-body {
+/* body {
   background-color: hsl(var(--muted));
-}
+} */
 .container {
   max-width: 1350px;
   margin-left: auto;
@@ -141,3 +141,30 @@ body {
 .animate-fadeInUp {
   animation: fadeInUp 1s ease-out forwards;
 }
+
+ /* for desktop */
+ .whatsapp_float {
+   position: fixed;
+   width: 60px;
+   height: 60px;
+   bottom: 40px;
+   right: 40px;
+   background-color: #25d366;
+   color: #FFF;
+   border-radius: 50px;
+   text-align: center;
+   font-size: 30px;
+   box-shadow: 2px 2px 3px #999;
+   z-index: 100;
+ }
+
+ .whatsapp-icon {
+   margin-top: 16px;
+ }
+
+ /* for mobile */
+ @media screen and (max-width: 767px) {
+   .whatsapp-icon {
+     margin-top: 10px;
+   }
+  }
